css/only-mw.css
/* ToC */
.Liberty .content-wrapper .liberty-content .liberty-content-main .toc {
	border-bottom-right-radius: 0.35rem;
	border-bottom-left-radius: 0.35rem;
	display: inline-block;
	font-size: 0.9rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .toc .toctitle {
	background-color: #f5f8fa;
	border: 1px solid #e1e8ed;
	border-top-right-radius: 0.35rem;
	border-top-left-radius: 0.35rem;
	padding: 0.6rem 1.2rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .toc .toctitle h2 {
	display: inline;
	font-size: 1.2rem;
	font-weight: bold;
	border: none;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .toc ul,
.Liberty .content-wrapper .liberty-content .liberty-content-main .toc li {
	background-color: #fff;
	list-style-type: none;
	list-style-image: none;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .toc > ul {
	margin: 0;
	padding: 0.6rem 1.2rem;
	border: 1px solid #e1e8ed;
	border-top: none;
	border-bottom-right-radius: 0.35rem;
	border-bottom-left-radius: 0.35rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .toc ul ul {
	margin: 0 0 0 1rem !important;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .toc .toctext {
	color: #373a3c;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .toc a:hover {
	text-decoration: none;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .toc a > .tocnumber:hover {
	text-decoration: underline;
}
/* ToC End */

/* Title */
.Liberty .content-wrapper .liberty-content .liberty-content-main h1,
.Liberty .content-wrapper .liberty-content .liberty-content-main h2,
.Liberty .content-wrapper .liberty-content .liberty-content-main h3,
.Liberty .content-wrapper .liberty-content .liberty-content-main h4,
.Liberty .content-wrapper .liberty-content .liberty-content-main h5,
.Liberty .content-wrapper .liberty-content .liberty-content-main h6 {
	margin-top: 1rem;
	border-bottom: 1px dashed #e1e8ed;
	margin-bottom: 0.6rem;
	padding-bottom: 0.6rem;
	overflow-wrap: break-word;
	overflow: hidden;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .mw-headline-number {
	color: #4188f1;
}
/* Title End */

/* Content */
.Liberty .content-wrapper .liberty-content .liberty-content-main ul {
	margin: 0.5rem 0 0.5rem 1.6rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .toccolours {
	background-color: #f5f8fa;
	border-color: #e1e8ed;
	border-radius: 0.35rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .catlinks {
	border: 1px solid #e1e8ed;
	padding: 0.4rem;
	padding-left: 1rem;
	box-shadow: 0.15rem 0.15rem 0 0 #cfdae2;
	margin-bottom: 0.8rem;
	border-radius: 0.35rem;
	display: inline-block;
	width: 100%;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .catlinks-allhidden {
	display: none;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .catlinks ul {
	padding: 0;
	margin-left: 0.5rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .catlinks ul > li {
	margin: 0;
}
/* Content */

/* Special Pages */
.Liberty .content-wrapper .liberty-content .liberty-content-main .mw-specialpages-table {
	margin-top: 0;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main fieldset {
	border: 1px solid #e1e8ed;
	padding: 1rem;
	padding-top: 0;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main legend {
	padding: 0.5rem;
	font-size: 0.9rem;
	width: auto;
	margin: 0;
}
/* Special Pages End */

/* Search results */
html .suggestions-results {
	border-color: #e1e8ed;
	padding: 0.5rem;
}

html .suggestions-special {
	border-color: #e1e8ed;
	padding: 0.5rem;
	border-bottom-right-radius: 0.35rem;
	border-bottom-left-radius: 0.35rem;
	background-color: #f5f8fa;
}

html .suggestions-result-current {
	background-color: #4c59a6;
	color: #373a3c;
	transition: 0.3s;
}
/* Search results End */

/* Thumbnail */
.Liberty .content-wrapper .liberty-content .liberty-content-main .center {
	margin: auto;
	text-align: center;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .thumbinner {
	margin: auto;
}
/* Thumbnail End */

/* Recent Changes (Menu) */
.Liberty .content-wrapper .liberty-content .liberty-content-main .mw-changeslist>h4 {
	margin-bottom: 0.2rem;
}
.Liberty .content-wrapper .liberty-content .liberty-content-main .special {
	margin: 0;
	padding: 0;
	list-style-image: none;
	list-style-type: none;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .special .mw-changeslist-separator {
	display: none;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .special>li {
	border-bottom: 1px solid #e1e8ed;
	padding: 0.5rem 0;
}
/* Recent Changes (Menu) End */

/* Image */
.Liberty .content-wrapper .liberty-content .liberty-content-main .tright {
	margin-left: 0.8rem;
	margin-bottom: 0.8rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .thumb .thumbcaption {
	padding-top: 0.4rem;
	text-align: center;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main .thumb img {
	box-shadow: 0.25rem 0.25rem 0 0 #e1e8ed;
}
/* Image End */

/* Left ToC */
#fixed-toc ul {
	list-style-image: none;
	list-style-type: none;
}

#fixed-toc .toctext {
	color: #373a3c;
}

#fixed-toc .toctitle h2 {
	display: inline-block;
}

#fixed-toc .toctitle .toctoggle {
	display: inline-block;
}

#fixed-toc ul ul {
	margin-left: 1rem;
}
/* Left ToC End */

/* Input */
select,
input:not( [type=button] ):not( [type=checkbox] ):not( [type=submit] ) {
	display: inline-block;
	padding: 0.2rem 0.4rem;
	font-size: 1rem;
	line-height: 1.5;
	color: #55595c;
	background-color: #fff;
	background-image: none;
	border: 1px solid #ccc;
	border-radius: .25rem;
}

html input.oo-ui-inputWidget-input[type=search]{
	padding-left: 2.5em!important;
}

select:focus,
input:not( [type=button] ):not( [type=checkbox] ):not( [type=submit] ):focus {
	border-color: #66afe9;
	outline: 0;
}

input[type=button],
input[type=submit],
button {
	box-shadow: none;
	display: inline-block;
	padding: 0.2rem 1rem;
	font-size: 1rem;
	font-weight: 400;
	line-height: 1.5;
	text-align: center;
	white-space: nowrap;
	cursor: pointer;
	border: 1px solid transparent;
	border-radius: .25rem;
	/* btn-success */
	color: #fff;
	background-color: #5cb85c;
}

input[type=button]:hover,
input[type=submit]:hover,
button:hover {
	background-color: #449d44;
}

/* Input End */

/* PostEdit */
html .postedit-container {
	z-index: 3000;
}

/* Fieldset overflow */
fieldset {
	overflow-x: scroll;
}

/* Hide empty list elements (T192446) */
.mw-empty-elt {
	display: none;
}

/* Extensions */

/* MsUpload */
html #msupload-dropzone {
	height: auto;
}
/* MsUpload End */

/* Extensions End */

